Solve old values showing up after editing and deleting query params and code cleanup
- Fixed: When a query parameter was edited, then another one was deleted, the old values of all remaining query parameter were added again in the query parameter form
- Remove redundant urlNewComplete variable, it can be replaced with urlNew.href
- Fix UI bug where the resulted URL was overflowing out of screen on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,12 @@ h2 {
   margin-top: 1rem;
 }
 
+.word-wrap {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
 /* Footer */
 app-footer {
   margin-top: auto;
